<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LocationBasedCallManager</string>
    <string name="action_settings">Settings</string>
    <string name="start">Start Service</string>
    <string name="hello_world">Hello world!</string>
    <string name="stop">Stop Service</string>
    <string name="title_activity_add_profile">AddProfile</string>
    <string name="title_activity_add_location">AddLocation</string>
    <string name="title_activity_edit_location">EditLocation</string>
    <string name="title_activity_location_listner">LocationListner</string>
    <string name="title_activity_sms_handling">SmsHandlingActivity</string>
    <string name="title_activity_volume">VolumeActivity</string>
    <string name="title_activity_phone_contact">PhoneContact</string>
    <string name="title_activity_location_selection">LocationSelection</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    <string name="add_location">Add New Location</string>
    <string name="edit_location">Edit Location</string>
    <string name="select_contact">Select a Contact you want to allowed</string>
    <string name="add_contact">Add Contact</string>
    <string name="enter_number">Enter Name</string>
    <string name="select_location">Select the Location Name Where you want to allow the contact</string>
    <string name="enter_location">Enter Location Name</string>
    <string name="enter_contact">Enter Contact Number</string>
    <string name="allowed_contacts">Allowed contacts</string>
    <string name="title_activity_allowed_contacts">AllowedContacts</string>
    <string name="location_name">Location Name</string>
    <string name="allowed_contacts">Allowed Contacts</string>
    <string name="delete">Delete</string>
    <string name="ajust_volume">Adjust volume</string>
    <string name="add_new_profile">Add New Profile for Location</string>
    <string name="block_call">Block Calls</string>
    <string name="set_reply">Set Reply Message</string>
    <string name="enter_lat">Enter Latitude of Location</string>
    <string name="messsage">Enter the AutoSend Message below</string>
    <string name="enter_message">Enter Message</string>
    <string name="select_cordinates">Select the location cordinates</string>
    <string name="volume">Ringing Volume</string>
    <string name="set_volume">Set the required ringing Volume</string>
    <string name="location_name">Enter Location Name</string>
    <string name="setvolume">Set Volume</string>
    <string name="lat_and_lng">Enter Longitude of Location</string>
    <string name="enternumber">Enter Call forwarding Number</string>
    <string name="create_profile">Create Profile</string>
    <string name="title_activity_profile_list">ProfileList</string>
    <string name="select_profile">Select Profile To Edit</string>
    <string name="edit_location">Edit the location</string>
    <string name="new_latitude">New Latitude</string>
    <string name="new_longitude">New Longitude</string>
    <string name="forwarding_number">Fowarding Number</string>
    <string name="auto_message">Auto Message</string>
    <string name="change_volume">Change Ringing Volume</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_location">Delete Location</string>

</resources>
