<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".VolumeActivity" >

    <TextView
        android:id="@+id/contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_volume" />

    <SeekBar
        android:id="@+id/volumebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/contact_name"
        android:layout_below="@+id/contact_name"
        android:layout_marginTop="57dp" />

    <Button
        android:id="@+id/savechange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/auto_message"
        android:layout_alignRight="@+id/auto_message"
        android:layout_below="@+id/auto_message"
        android:layout_marginTop="21dp"
        android:text="@string/back" />

    <TextView
        android:id="@+id/volumelevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/contact_number"
        android:layout_marginLeft="26dp"
        android:layout_toRightOf="@+id/contact_number"/>

    <Button
        android:id="@+id/auto_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/volumebar"
        android:layout_alignRight="@+id/volumebar"
        android:layout_centerVertical="true"
        android:text="@string/ok" />

    <TextView
        android:id="@+id/contact_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/auto_message"
        android:layout_alignLeft="@+id/auto_message"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="16dp"
        android:text="@string/volume" />

</RelativeLayout>
